# lgtm_AI

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  reindex.ps1  reindex.sh  reset.ps1  reset.sh
grafana-provisioning/dashboards/: ai-investigation-provider.yaml  ai-log-investigation.json
incident-graph-indexer/: Dockerfile  pyproject.toml
incident-graph-indexer/src/indexer/: atlas_loader.py  config.py  llm_client.py  main.py  neo4j_writer.py
investigation-service/: Dockerfile  pom.xml
investigation-service/src/main/java/com/firm/investigation/: InvestigationServiceApplication.java
investigation-service/src/main/resources/: application-azure-openai.yml  application-ollama.yml  application-real-data.yml  application.yml
investigation-service/src/test/java/com/firm/investigation/: InvestigationIntegrationTest.java
panel-service/: Dockerfile  pom.xml
panel-service/src/main/java/com/firm/panel/: PanelController.java  PanelLibrary.java  PanelServiceApplication.java  PanelTemplate.java
panel-service/src/main/resources/: application.yml
panel-service/src/main/resources/panels/: db_connection_pool.json  db_query_latency.json  error_rate.json  gc_pause_duration.json  heap_by_component.json  latency_p95.json  latency_p99.json  log_stream.json  mq_consumer_lag.json  mq_dead_letter_count.json  mq_queue_depth.json  thread_pool_active.json  trace_waterfall.json
test-data-service/: Dockerfile  pom.xml
test-data-service/src/main/resources/: application.yml
test-data-service/src/main/resources/atlas/: incidents.json
(+83 files in other folders)
