[project]
name = "incident-graph-indexer"
version = "0.1.0"
description = "Ingests Atlas incidents into Neo4j as a knowledge graph"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.20",
    "requests>=2.31",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
